--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
           <button class="btn btn-default btn-lg" id="session-decrement">-</button>
           <h2 id="session-length">25</h2>
           <button class="btn btn-default btn-lg" id="session-increment">+</button>
-          <button class="btn btn-default btn-lg" id="reset">reset</button>
         </div>
 
         <div id="timer-label">
-          <h1>session: </h1>
-          <h2 id="time-left">0</h2>
+          <h1>session:</h1>
+          <br>
+          <h2 id="time-left" class="bigger">0</h2>
+          <br>
+          <button class="btn btn-default btn-lg" id="reset">reset</button>
         </div>
 
         <div class="break">
@@ -58,7 +60,7 @@
     <!-- audio elements -->
     <div class="audio">
       <audio id="beep">
-        <source src="audio/bell_ring.mp3">
+        <source src="audio/bell_ring.mp3" volume="0.5">
       </audio>
       <audio id="click">
         <source src="audio/button_click_on.mp3">
@@ -69,11 +71,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <!-- freeCodeCamp testing script -->
+    <!-- freeCodeCamp testing script from CDN -->
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <!-- Ion Sounds -->
-    <script src="scripts/ion.sound.js"></script>
     <!-- local script -->
     <script src="scripts/main.js"></script>
+    <!-- short local script to control audio volume -->
+    <script src="scripts/volume.js"></script>
   </body>
 </html>
