continuing to work on it

--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
           <button class="btn btn-default btn-lg" id="break-increment">+</button>
         </div>
 
-        <button class="btn btn-default btn-lg" id="start_stop">start</button>
-        <button class="btn btn-default btn-lg" id="reset">reset</button>
+        <div id="start_stop">
+          <button class="btn btn-default btn-lg" id="start"><i class="fas fa-play"></i> start</button>
+          <button class="btn btn-default btn-lg" id="pause"><i class="fas fa-pause"></i> pause</button>
+          <button class="btn btn-default btn-lg" id="reset"><i class="fas fa-sync-alt"></i> reset</button>
+        </div>
 
       </div>
 
